@@ -50,19 +50,18 @@ graalvmNative {
             imageName = 'attacker'
         }
 
-        register("victim") {
+        egister("victim") {
             mainClass = 'shell.Victim'
             imageName = 'victim'
 
-            // Enable JDK 24 User-Friendly Reachability Mode
-            buildArgs.add('--exact-reachability-metadata=shell')
-
-            // Explicitly point to the consolidated metadata file
+            // We use the consolidated directory flag
             buildArgs.add("-H:ConfigurationFileDirectories=${projectDir}/src/main/resources/META-INF/native-image/shell/victim/")
+
+            // Force native access for JNA
+            buildArgs.add('--enable-native-access=ALL-UNNAMED')
 
             buildArgs.add('-H:+StaticExecutableWithDynamicLibC')
             buildArgs.add('-Djna.nosys=true')
-            buildArgs.add('--verbose')
         }
 
     }
